# itsmonday-OS

./: Cargo.toml  target.txt  x86_64_target.json
.cargo/: config.toml
src/: addr.rs  gdt.rs  idt.rs  interrupts.rs  ist.rs  lib.rs  main.rs  meme_encrypt.rs  model_specific.rs  rflags.rs  segmentation.rs  serial.rs  vga_buffer.rs
src/structures/: mod.rs  page.rs  page_table.rs  phys_frame.rs
tests/: basic_boot.rs  should_panic.rs  stack_overflow_test.rs
