[package]
name = "rustyos"
version = "0.1.0"
edition = "2024"

[dependencies]
bootloader = "0.9"
spin = "0.5.2"
uart_16550 = "0.2.0"
volatile = "0.2.6"
x86_64 = "0.14.2"

# [profile.dev]
# panic = "abort"

# [profile.release]
# panic = "abort"

[features]
proc-macro = []

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio"]
# test-success-exit-code = 33
# test-timeout = 300